[package]
name = "joe-dirt-pico"
version = "0.1.0"
authors = ["Nathaniel Rowan <rowannh@vcu.edu>"]
edition = "2021"
description = "Joe Dirt code rewritten in Rust"
readme = "README.md"
repository = "https://github.com/asme-vcu/dirt-2021-rs/"
license = "MIT OR Apache-2.0"
categories = ["no-std", "embedded", "science::robotics"]
publish = false

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2", features = ["unproven"] }
fugit = { version = "0.3", features = ["defmt"] }
mpu6050 = "0.1"
nb = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.5"

# this won't be needed on the next release of rp-pico crate
rp2040-monotonic = "1.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
